# io_uring-utils

./: Cargo.toml  README.md
.github/workflows/: CI.yml
examples/tokio-uring-epoll/: Cargo.toml
examples/tokio-uring-epoll/src/: main.rs
io-uring-bearer/: Cargo.toml  README.md
io-uring-bearer/src/: capacity.rs  completion.rs  error.rs  fd.rs  fixed.rs  lib.rs  slab.rs  submission.rs  uring.rs
io-uring-bearer/src/fd/: fdkind.rs  registered_fd.rs
io-uring-bearer/src/slab/: accept.rs  buffer.rs  epoll_ctl.rs  futex.rs  recv.rs  send_zc.rs
io-uring-bearer/src/uring/: accept.rs  accept_multi.rs  buffers.rs  connect.rs  epoll_ctl.rs  futex.rs  recv.rs  register.rs  send_zc.rs  socket.rs
io-uring-bufring/: Cargo.toml  README.md
io-uring-bufring/src/: error.rs  lib.rs  ring_buf.rs
io-uring-bufring/src/ring_buf/: ring_buf_test.rs
io-uring-epoll/: Cargo.toml  README.md
io-uring-epoll/examples/: listener.rs
io-uring-epoll/examples/tokio-uring-epoll/: Cargo.toml
io-uring-epoll/examples/tokio-uring-epoll/src/: main.rs
io-uring-epoll/src/: completion.rs  epoll.rs  epoll_ctl.rs  epoll_uring.rs  error.rs  fd.rs  fixed.rs  handled_fd.rs  lib.rs  ownership.rs  slab.rs  uring.rs
io-uring-epoll/src/fd/: fdkind.rs  registered_fd.rs
io-uring-epoll/src/slab/: accept.rs  buffer.rs  epoll_ctl.rs  futex.rs  recv.rs
io-uring-epoll/src/uring/: accept.rs  buffers.rs  futex.rs  recv.rs  register.rs  send_zc.rs
io-uring-fd/: Cargo.toml  README.md
io-uring-fd/src/: lib.rs
io-uring-opcode/: Cargo.toml  README.md
io-uring-opcode-sets/: Cargo.toml  README.md
io-uring-opcode-sets/src/: lib.rs  wrapper.rs
io-uring-opcode/src/: error.rs  lib.rs  traits.rs  types.rs
io-uring-opcode/src/traits/: accept_multi.rs  connect.rs  epoll_ctl.rs  socket.rs
io-uring-opcode/src/types/: socket.rs
io-uring-owner/: Cargo.toml  README.md
io-uring-owner/src/: error.rs  lib.rs
io-uring-probe/: Cargo.toml
io-uring-probe/src/: lib.rs
ops/op-accept-multi/: Cargo.toml  README.md
ops/op-accept-multi/examples/: accept_multi_fixed.rs  accept_multi_regular.rs
ops/op-accept-multi/src/: accept_multi.rs  error.rs  lib.rs
ops/op-connect/: Cargo.toml  README.md
ops/op-connect/examples/: connect.rs
ops/op-connect/src/: connect.rs  error.rs  lib.rs
ops/op-socket/: Cargo.toml  README.md
ops/op-socket/examples/: socket_fixed_auto.rs  socket_fixed_manual.rs  socket_regular.rs
ops/op-socket/src/: error.rs  lib.rs  socket.rs
src/: README.md  lib.rs
