[package]
name = "io-uring-bearer"
version = "0.2.0-pre3"
edition = "2021"
description = "io_uring bearer"
homepage = "https://github.com/yaws-rs/io_uring-utils"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/io_uring-utils"
categories = ["science"]

[dependencies]
capacity = "0.1"
hashbrown = "0.15.2"
io-uring = { version = "0.7" }
libc = { version = "0.2", features = ["extra_traits"] }
nohash-hasher = "0.2.0"
slab = { version = "0.4" }
slabbable = { version = "0.1", path = "../../edifice/slabbable" }
slabbable-impl-selector = { version = "0.1", path = "../../edifice/slabbable-impl-selector" }
io-uring-opcode = { version = "0.2.0-pre3", path = "../io-uring-opcode" }
io-uring-fd = { version = "0.2.0-pre1", path = "../io-uring-fd" }
io-uring-owner = { version = "0.2.0-pre1", path = "../io-uring-owner" }

[features]
default = []
accept_multi = ["io-uring-opcode/accept_multi"]
epoll = ["io-uring-opcode/epoll"]
connect = ["io-uring-opcode/connect"]

[package.metadata.docs.rs]
features = ["epoll"]
