[package]
name = "io-uring-epoll"
version = "0.1.0"
edition = "2021"
description = "When your io_uring meets your epoll"
homepage = "https://github.com/yaws-rs/io_uring-utils/tree/main/io-uring-epoll"
keywords = ["io", "uring", "epoll", "async"]
license = "MIT/Apache 2.0"
readme = "README.md"
repository = "https://github.com/yaws-rs/io_uring-utils/tree/main/io-uring-epoll"
categories = ["science"]

[dependencies]
io-uring = { version = "0.6" }
libc = { version = "0.2" }

[features]
default = []
