[package]
name = "io-uring-opcode"
version = "0.0.1-pre0"
edition = "2021"
description = "io_uring opcode trait contract between bearer and opcodes"
homepage = "https://github.com/yaws-rs/io_uring-utils"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/io_uring-utils"
categories = ["science"]

[dependencies]
io-uring = "0.7.4"
io-uring-owner = { version = "0.0.1-pre0", path = "../io-uring-owner" }

[features]
default = []
