[package]
name = "io-uring-opcode"
version = "0.2.0-pre2"
edition = "2021"
description = "io_uring opcode trait contract between bearer and opcodes"
homepage = "https://github.com/yaws-rs/io_uring-utils"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/io_uring-utils"
categories = ["science"]

[dependencies]
io-uring = "0.7.4"
io-uring-owner = { version = "0.2.0-pre1", path = "../io-uring-owner" }
libc = "0.2.169"
ysockaddr = { version = "0.2.0" }

[features]
default = []
connect = []
epoll = []

[package.metadata.docs.rs]
features = ["connect", "epoll"]
