[package]
name = "io-uring-op-connect"
version = "0.0.1"
edition = "2021"
description = "Connect OpCode for io-uring-bearer"
homepage = "https://github.com/yaws-rs/io_uring-utils/tree/main/op-connect"
keywords = ["io", "uring"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/io_uring-utils/tree/main/op-connect"
categories = ["science"]

[dependencies]
io-uring = { version = "0.7" }
libc = { version = "0.2", features = ["extra_traits"] }
io-uring-opcode = { version = "0.2.0-pre1", path = "../../io-uring-opcode", features = ["connect"] }
io-uring-bearer = { version = "0.2.0-pre1", path = "../../io-uring-bearer", features = ["connect"] }
io-uring-fd = { version = "0.2.0-pre1", path = "../../io-uring-fd" }
io-uring-owner = { version = "0.2.0-pre1", path = "../../io-uring-owner" }
capacity = "0.1.2"
ysockaddr = { version = "0.2.0" }

[features]
default = []
